--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
 
                 <div class="article-list mt-6 space-y-0">
 
-                    <article data-category="publication" data-title="knowflow unified planning for remote sensing agents">
-                        <a href="https://arxiv.org/abs/2503.00001" target="_blank" class="publication-card block">
+                    <article data-category="publication" data-title="knowflow arxiv 2512.15231">
+                        <a href="https://arxiv.org/abs/2512.15231" target="_blank" class="publication-card block">
                             <div class="article-container">
                                 <div class="article-category">
                                     <div class="flex items-center">
@@ -530,113 +530,65 @@
                                     <h3 class="article-title">KnowFlow</h3>
                                 </div>
                                 <div class="article-date">
-                                    <span class="date-label">Mar 1, 2025</span>
+                                    <span class="date-label">Dec 2025</span>
                                 </div>
                                 <div class="article-description">
-                                    <p class="article-desc">Unified workflow planning for trustworthy remote-sensing agents</p>
+                                    <p class="article-desc">arXiv 2512.15231 — unified workflow planning for remote-sensing agents</p>
                                 </div>
                             </div>
                         </a>
                     </article>
 
-                    <article data-category="publication" data-title="flowagent end to end remote sensing agent">
-                        <a href="https://arxiv.org/abs/2504.00002" target="_blank" class="publication-card block">
+                    <article data-category="benchmark" data-title="knowflow bench">
+                        <a href="https://cangling-agent.github.io/KnowFlow/" target="_blank" class="publication-card block">
                             <div class="article-container">
                                 <div class="article-category">
                                     <div class="flex items-center">
                                         <div class="article-icon w-5 h-5 text-gray-700 mr-2 shrink-0">
-                                            <img src="imgs/arxiv-logo.svg" alt="arXiv logo" class="icon-small">
-                                        </div>
-                                        <span class="category-label">Publication</span>
-                                    </div>
-                                </div>
-                                <div class="article-title-cell">
-                                    <h3 class="article-title">FlowAgent</h3>
-                                </div>
-                                <div class="article-date">
-                                    <span class="date-label">Apr 5, 2025</span>
-                                </div>
-                                <div class="article-description">
-                                    <p class="article-desc">An end-to-end remote-sensing agent with grounded temporal reasoning</p>
-                                </div>
-                            </div>
-                        </a>
-                    </article>
-
-                    <article data-category="dataset" data-title="knowflow actions dataset">
-                        <a href="https://hf.co/datasets/cangling/knowflow-actions" target="_blank" class="publication-card block">
-                            <div class="article-container">
-                                <div class="article-category">
-                                    <div class="flex items-center">
-                                        <div class="article-icon w-5 h-5 text-gray-700 mr-2 shrink-0">
-                                            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face logo">
-                                        </div>
-                                        <span class="category-label">Dataset</span>
-                                    </div>
-                                </div>
-                                <div class="article-title-cell">
-                                    <h3 class="article-title">cangling/<strong>KnowFlow-Actions</strong></h3>
-                                </div>
-                                <div class="article-date">
-                                    <span class="date-label">Mar 1, 2025</span>
-                                </div>
-                                <div class="article-description">
-                                    <p class="article-desc">Action graphs and operator traces for workflow agents in Earth observation</p>
-                                </div>
-                            </div>
-                        </a>
-                    </article>
-
-                    <article data-category="dataset" data-title="rs instruction 350k dataset">
-                        <a href="https://hf.co/datasets/cangling/rs-instruction-350k" target="_blank" class="publication-card block">
-                            <div class="article-container">
-                                <div class="article-category">
-                                    <div class="flex items-center">
-                                        <div class="article-icon w-5 h-5 text-gray-700 mr-2 shrink-0">
-                                            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face logo">
-                                        </div>
-                                        <span class="category-label">Dataset</span>
-                                    </div>
-                                </div>
-                                <div class="article-title-cell">
-                                    <h3 class="article-title">cangling/<strong>RS-Instruction-350K</strong></h3>
-                                </div>
-                                <div class="article-date">
-                                    <span class="date-label">Mar 8, 2025</span>
-                                </div>
-                                <div class="article-description">
-                                    <p class="article-desc">Instruction tuning data for spatial-temporal understanding in satellite imagery</p>
-                                </div>
-                            </div>
-                        </a>
-                    </article>
-
-                    <article data-category="benchmark" data-title="rs agentbench benchmark">
-                        <a href="https://hf.co/collections/cangling/rs-agentbench" target="_blank" class="publication-card block">
-                            <div class="article-container">
-                                <div class="article-category">
-                                    <div class="flex items-center">
-                                        <div class="article-icon w-5 h-5 text-gray-700 mr-2 shrink-0">
-                                            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face logo">
+                                            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Benchmark icon">
                                         </div>
                                         <span class="category-label">Benchmark</span>
                                     </div>
                                 </div>
                                 <div class="article-title-cell">
-                                    <h3 class="article-title">cangling/<strong>RS-AgentBench</strong></h3>
+                                    <h3 class="article-title">KnowFlow-Bench</h3>
                                 </div>
                                 <div class="article-date">
-                                    <span class="date-label">Apr 12, 2025</span>
+                                    <span class="date-label">Dec 2025</span>
                                 </div>
                                 <div class="article-description">
-                                    <p class="article-desc">Long-horizon task evaluation for remote-sensing agents with grounded actions</p>
+                                    <p class="article-desc">Evaluation suite for KnowFlow remote-sensing agents</p>
                                 </div>
                             </div>
                         </a>
                     </article>
 
-                    <article data-category="code" data-title="knowflow code release">
-                        <a href="https://github.com/cangling/knowflow" target="_blank" class="publication-card block">
+                    <article data-category="dataset" data-title="knowflow dataset">
+                        <a href="https://cangling-agent.github.io/KnowFlow/" target="_blank" class="publication-card block">
+                            <div class="article-container">
+                                <div class="article-category">
+                                    <div class="flex items-center">
+                                        <div class="article-icon w-5 h-5 text-gray-700 mr-2 shrink-0">
+                                            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face logo">
+                                        </div>
+                                        <span class="category-label">Dataset</span>
+                                    </div>
+                                </div>
+                                <div class="article-title-cell">
+                                    <h3 class="article-title">KnowFlow Dataset</h3>
+                                </div>
+                                <div class="article-date">
+                                    <span class="date-label">Dec 2025</span>
+                                </div>
+                                <div class="article-description">
+                                    <p class="article-desc">Action graphs and operator traces for workflow agents</p>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+
+                    <article data-category="code" data-title="knowflow code">
+                        <a href="https://cangling-agent.github.io/KnowFlow/" target="_blank" class="publication-card block">
                             <div class="article-container">
                                 <div class="article-category">
                                     <div class="flex items-center">
@@ -647,37 +599,13 @@
                                     </div>
                                 </div>
                                 <div class="article-title-cell">
-                                    <h3 class="article-title">cangling/<strong>knowflow</strong></h3>
+                                    <h3 class="article-title">KnowFlow Code</h3>
                                 </div>
                                 <div class="article-date">
-                                    <span class="date-label">Mar 1, 2025</span>
+                                    <span class="date-label">Dec 2025</span>
                                 </div>
                                 <div class="article-description">
-                                    <p class="article-desc">Planning and execution toolkit for KnowFlow agents</p>
-                                </div>
-                            </div>
-                        </a>
-                    </article>
-
-                    <article data-category="code" data-title="flowagent tools release">
-                        <a href="https://github.com/cangling/flowagent" target="_blank" class="publication-card block">
-                            <div class="article-container">
-                                <div class="article-category">
-                                    <div class="flex items-center">
-                                        <svg class="w-5 h-5 text-gray-700 mr-2 shrink-0" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
-                                            <path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
-                                        </svg>
-                                        <span class="category-label">Code</span>
-                                    </div>
-                                </div>
-                                <div class="article-title-cell">
-                                    <h3 class="article-title">cangling/<strong>flowagent</strong></h3>
-                                </div>
-                                <div class="article-date">
-                                    <span class="date-label">Apr 5, 2025</span>
-                                </div>
-                                <div class="article-description">
-                                    <p class="article-desc">Tools, prompts, and evaluators for FlowAgent deployment</p>
+                                    <p class="article-desc">Tooling and demos for KnowFlow agents</p>
                                 </div>
                             </div>
                         </a>
