--- a/KnowFlow/index.html
+++ b/KnowFlow/index.html
@@ -239,7 +239,7 @@
         </div>
 
         <div class="cf-cta-group">
-          <a class="cf-cta" href="https://arxiv.org/abs/2501.00000" target="_blank" rel="noopener">
+          <a class="cf-cta" href="https://arxiv.org/abs/2512.15231" target="_blank" rel="noopener">
             <i class="ai ai-arxiv"></i><span>arXiv</span>
           </a>
           <a class="cf-cta disabled" aria-disabled="true">
@@ -410,12 +410,11 @@
             <span class="copy-text">Copy</span>
           </button>
         </div>
-<pre id="bibtex-code"><code>@article{CanglingKnowFlow2025,
-  title={Cangling-KnowFlow: A Unified Knowledge-and-Flow-fused Agent for Comprehensive Remote Sensing Applications},
-  author={Chen, Zhengchao and Wang, Haoran and Yao, Jing and Ghamisi, Pedram and Zhou, Jun and Atkinson, Peter M. and Zhang, Bing},
-  journal={arxiv},
-  year={2025},
-  note={comming soon},
+<pre id="bibtex-code"><code>@article{CangLingKnowFlow2025,
+  title={CangLing-KnowFlow: A Unified Knowledge-and-Flow-fused Agent for Comprehensive Remote Sensing Applications},
+  author={Chen, Zhengchao and Wang, Haoran and Yao, Jing and Ghamisi, Pedram and Zhou, Jun and Atkinson, Peter M and Zhang, Bing},
+  journal={arXiv preprint arXiv:2512.15231},
+  year={2025}
 }</code></pre>
       </div>
     </section>
